# openalpha

./: .gitignore  .valgrind-python.supp  Dockfile-dev  README.md  makefile  openalpha.conf  sample.py
scripts/: build_module.py  data.py  forward_fill.py  gen_supp.sh  openalpha.py  simsummary.py  transpose.py
src/: CMakeLists.txt
src/alpha/sample/: CMakeLists.txt  sample.cc
src/openalpha/: CMakeLists.txt  alpha.cc  alpha.h  common.h  data.cc  data.h  logger.h  main.cc  python.cc  python.h
